--- a/notebooks/initial_tracking.ipynb
+++ b/notebooks/initial_tracking.ipynb
@@ -5,21 +5,34 @@
    "id": "0eb59b6e",
    "metadata": {},
    "source": [
-    "# NYC Taxi Predictions 2025 - Initial Tracking"
+    "# <font color= #8FC3FA> **NYC Taxi Predictions 2025 - Initial Tracking** </font>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "8d8b3eba",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# General Libraries\n",
     "import pandas as pd\n",
+    "import pickle\n",
+    "\n",
+    "# Feature Engineering\n",
     "from sklearn.feature_extraction import DictVectorizer\n",
+    "\n",
+    "# Modeling\n",
+    "import mlflow\n",
     "from sklearn.linear_model import Lasso\n",
+    "from sklearn.ensemble import GradientBoostingRegressor, ExtraTreesRegressor, RandomForestRegressor\n",
+    "from sklearn.svm import LinearSVR\n",
+    "\n",
+    "# Evaluation\n",
     "from sklearn.metrics import root_mean_squared_error\n",
-    "import mlflow"
+    "\n",
+    "# Autolog function\n",
+    "mlflow.sklearn.autolog()"
    ]
   },
   {
@@ -27,12 +40,12 @@
    "id": "9e2cca5a",
    "metadata": {},
    "source": [
-    "## Data"
+    "# <font color= #8FC3FA> **1. Data Loading** </font>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4ef5a01e",
    "metadata": {},
    "outputs": [],
@@ -66,7 +79,33 @@
    "id": "ef00ef3e",
    "metadata": {},
    "source": [
-    "## MLFlow"
+    "# <font color= #8FC3FA> **2. ML FLow** </font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a359b8ee",
+   "metadata": {},
+   "source": [
+    "### **Activate MLFlow:**\n",
+    "\n",
+    "`uv run mlflow ui --backend-store-uri sqlite:///mlflow.db`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36630787",
+   "metadata": {},
+   "source": [
+    "## <font color= #8FC3FA> **• Lasso Model - Experiment 07/10** </font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0db6e70b",
+   "metadata": {},
+   "source": [
+    "**Experiment:** Lasso Model - alpha: 0.1"
    ]
   },
   {
@@ -74,72 +113,7 @@
    "execution_count": null,
    "id": "522afa62",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025/10/07 21:37:22 INFO mlflow.store.db.utils: Creating initial MLflow database tables...\n",
-      "2025/10/07 21:37:22 INFO mlflow.store.db.utils: Updating database tables\n",
-      "INFO  [alembic.runtime.migration] Context impl SQLiteImpl.\n",
-      "INFO  [alembic.runtime.migration] Will assume non-transactional DDL.\n",
-      "INFO  [alembic.runtime.migration] Running upgrade  -> 451aebb31d03, add metric step\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 451aebb31d03 -> 90e64c465722, migrate user column to tags\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 90e64c465722 -> 181f10493468, allow nulls for metric values\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 181f10493468 -> df50e92ffc5e, Add Experiment Tags Table\n",
-      "INFO  [alembic.runtime.migration] Running upgrade df50e92ffc5e -> 7ac759974ad8, Update run tags with larger limit\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 7ac759974ad8 -> 89d4b8295536, create latest metrics table\n",
-      "INFO  [89d4b8295536_create_latest_metrics_table_py] Migration complete!\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 89d4b8295536 -> 2b4d017a5e9b, add model registry tables to db\n",
-      "INFO  [2b4d017a5e9b_add_model_registry_tables_to_db_py] Adding registered_models and model_versions tables to database.\n",
-      "INFO  [2b4d017a5e9b_add_model_registry_tables_to_db_py] Migration complete!\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 2b4d017a5e9b -> cfd24bdc0731, Update run status constraint with killed\n",
-      "INFO  [alembic.runtime.migration] Running upgrade cfd24bdc0731 -> 0a8213491aaa, drop_duplicate_killed_constraint\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 0a8213491aaa -> 728d730b5ebd, add registered model tags table\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 728d730b5ebd -> 27a6a02d2cf1, add model version tags table\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 27a6a02d2cf1 -> 84291f40a231, add run_link to model_version\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 84291f40a231 -> a8c4a736bde6, allow nulls for run_id\n",
-      "INFO  [alembic.runtime.migration] Running upgrade a8c4a736bde6 -> 39d1c3be5f05, add_is_nan_constraint_for_metrics_tables_if_necessary\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 39d1c3be5f05 -> c48cb773bb87, reset_default_value_for_is_nan_in_metrics_table_for_mysql\n",
-      "INFO  [alembic.runtime.migration] Running upgrade c48cb773bb87 -> bd07f7e963c5, create index on run_uuid\n",
-      "INFO  [alembic.runtime.migration] Running upgrade bd07f7e963c5 -> 0c779009ac13, add deleted_time field to runs table\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 0c779009ac13 -> cc1f77228345, change param value length to 500\n",
-      "INFO  [alembic.runtime.migration] Running upgrade cc1f77228345 -> 97727af70f4d, Add creation_time and last_update_time to experiments table\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 97727af70f4d -> 3500859a5d39, Add Model Aliases table\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 3500859a5d39 -> 7f2a7d5fae7d, add datasets inputs input_tags tables\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 7f2a7d5fae7d -> 2d6e25af4d3e, increase max param val length from 500 to 8000\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 2d6e25af4d3e -> acf3f17fdcc7, add storage location field to model versions\n",
-      "INFO  [alembic.runtime.migration] Running upgrade acf3f17fdcc7 -> 867495a8f9d4, add trace tables\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 867495a8f9d4 -> 5b0e9adcef9c, add cascade deletion to trace tables foreign keys\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 5b0e9adcef9c -> 4465047574b1, increase max dataset schema size\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 4465047574b1 -> f5a4f2784254, increase run tag value limit to 8000\n",
-      "INFO  [alembic.runtime.migration] Running upgrade f5a4f2784254 -> 0584bdc529eb, add cascading deletion to datasets from experiments\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 0584bdc529eb -> 400f98739977, add logged model tables\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 400f98739977 -> 6953534de441, add step to inputs table\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 6953534de441 -> bda7b8c39065, increase_model_version_tag_value_limit\n",
-      "INFO  [alembic.runtime.migration] Running upgrade bda7b8c39065 -> cbc13b556ace, add V3 trace schema columns\n",
-      "INFO  [alembic.runtime.migration] Running upgrade cbc13b556ace -> 770bee3ae1dd, add assessments table\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 770bee3ae1dd -> a1b2c3d4e5f6, add spans table\n",
-      "INFO  [alembic.runtime.migration] Running upgrade a1b2c3d4e5f6 -> de4033877273, create entity_associations table\n",
-      "INFO  [alembic.runtime.migration] Running upgrade de4033877273 -> 1a0cddfcaa16, Add webhooks and webhook_events tables\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 1a0cddfcaa16 -> 534353b11cbc, add scorer tables\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 534353b11cbc -> 71994744cf8e, add evaluation datasets\n",
-      "INFO  [alembic.runtime.migration] Context impl SQLiteImpl.\n",
-      "INFO  [alembic.runtime.migration] Will assume non-transactional DDL.\n",
-      "2025/10/07 21:37:24 INFO mlflow.tracking.fluent: Experiment with name 'class-nyc-taxi-experiment' does not exist. Creating a new experiment.\n",
-      "2025/10/07 21:37:26 WARNING mlflow.models.model: `artifact_path` is deprecated. Please use `name` instead.\n",
-      "2025/10/07 21:37:45 WARNING mlflow.utils.environment: Failed to resolve installed pip version. ``pip`` will be added to conda.yaml environment spec without a version specifier.\n",
-      "2025/10/07 21:37:45 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Run finalizado. RMSE = 8.9926\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mlflow.set_tracking_uri(\"sqlite:///mlflow.db\")\n",
     "mlflow.set_experiment(\"class-nyc-taxi-experiment\")          # Experiment name\n",
@@ -158,6 +132,238 @@
     "    mlflow.sklearn.log_model(model, \"model\")\n",
     "\n",
     "    print(f\"✅ Run finalizado. RMSE = {rmse:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69c68f10",
+   "metadata": {},
+   "source": [
+    "## <font color= #8FC3FA> **• GradientBoost, ExtraTreeRegressor & SVR - Experiment 14/10** </font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ebdaf71",
+   "metadata": {},
+   "source": [
+    "**Experiment Storage:** "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b1738bbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/10/14 21:22:25 INFO mlflow.store.db.utils: Creating initial MLflow database tables...\n",
+      "2025/10/14 21:22:25 INFO mlflow.store.db.utils: Updating database tables\n",
+      "INFO  [alembic.runtime.migration] Context impl SQLiteImpl.\n",
+      "INFO  [alembic.runtime.migration] Will assume non-transactional DDL.\n",
+      "INFO  [alembic.runtime.migration] Context impl SQLiteImpl.\n",
+      "INFO  [alembic.runtime.migration] Will assume non-transactional DDL.\n",
+      "2025/10/14 21:22:25 INFO mlflow.tracking.fluent: Experiment with name 'class-nyc-taxi-model-registry-example' does not exist. Creating a new experiment.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Experiment: artifact_location='file:c:/Users/Vivienne/apps/data_science_project/nyc-taxi-predictions-2025/notebooks/mlruns/2', creation_time=1760498545784, experiment_id='2', last_update_time=1760498545784, lifecycle_stage='active', name='class-nyc-taxi-model-registry-example', tags={}>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlflow.set_tracking_uri(\"sqlite:///mlflow.db\")\n",
+    "mlflow.set_experiment(\"class-nyc-taxi-model-registry-example\")          # Experiment name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "73216c46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_dataset = mlflow.data.from_numpy(X_train.data, targets=y_train, name=\"green_tripdata_2025-01\")\n",
+    "validation_dataset = mlflow.data.from_numpy(X_val.data, targets=y_val, name=\"green_tripdata_2025-02\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5264cf47",
+   "metadata": {},
+   "source": [
+    "Models to Run:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0b581f81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models = [\n",
+    "    \n",
+    "    {\"model\": GradientBoostingRegressor,\n",
+    "     \"params\": {\"n_estimators\": 100, \"learning_rate\": 0.3, \"max_depth\": 25, \"random_state\": 42},\n",
+    "     },\n",
+    "    \n",
+    "    {\"model\": ExtraTreesRegressor,\n",
+    "     \"params\": {\"n_estimators\": 100, \"max_depth\": 15, \"random_state\": 42},\n",
+    "     },\n",
+    "    \n",
+    "    {\"model\": LinearSVR,\n",
+    "     \"params\": {\"C\": 1.0, \"epsilon\": 0}, \n",
+    "     },\n",
+    "\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "2567bce4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/10/14 21:31:58 WARNING mlflow.utils.environment: Failed to resolve installed pip version. ``pip`` will be added to conda.yaml environment spec without a version specifier.\n",
+      "2025/10/14 21:32:15 WARNING mlflow.utils.environment: Failed to resolve installed pip version. ``pip`` will be added to conda.yaml environment spec without a version specifier.\n",
+      "c:\\Users\\Vivienne\\apps\\data_science_project\\nyc-taxi-predictions-2025\\.venv\\Lib\\site-packages\\sklearn\\svm\\_base.py:1250: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n",
+      "2025/10/14 21:32:22 WARNING mlflow.utils.environment: Failed to resolve installed pip version. ``pip`` will be added to conda.yaml environment spec without a version specifier.\n"
+     ]
+    }
+   ],
+   "source": [
+    "with mlflow.start_run(run_name=\"Nested Runs\"):\n",
+    "    for model in models:\n",
+    "        \n",
+    "        model_class = model[\"model\"]            # Select the model\n",
+    "        model_name = model_class.__name__       # Extract Model Name\n",
+    "        params = model[\"params\"]                # Apply the params of the model defined in the model list\n",
+    "        \n",
+    "        with mlflow.start_run(run_name=model_name,nested=True):         # Nests all the models\n",
+    "            \n",
+    "            ml_model = model_class(**params)    # Unzips the params and applies it to the models\n",
+    "           \n",
+    "            ml_model.fit(X_train, y_train)      # Fitting\n",
+    "    \n",
+    "            y_pred = ml_model.predict(X_val)    # Prediction\n",
+    "            \n",
+    "            rmse = root_mean_squared_error(y_val, y_pred)\n",
+    "            mlflow.log_metric(\"rmse\", rmse)\n",
+    "            \n",
+    "            # !mkdir models\n",
+    "            with open(\"models/preprocessor.b\", \"wb\") as f_out:\n",
+    "                pickle.dump(dv, f_out)\n",
+    "                \n",
+    "            mlflow.log_artifact(\"models/preprocessor.b\", artifact_path=\"preprocessor\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c72c9cbf",
+   "metadata": {},
+   "source": [
+    "## <font color= #8FC3FA> **• Random Forest Regressor - Experiment 14/10** </font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "6c651f6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/10/14 21:46:55 WARNING mlflow.utils.environment: Failed to resolve installed pip version. ``pip`` will be added to conda.yaml environment spec without a version specifier.\n",
+      "2025/10/14 21:46:57 WARNING mlflow.models.model: `artifact_path` is deprecated. Please use `name` instead.\n",
+      "2025/10/14 21:46:57 WARNING mlflow.sklearn: Model was missing function: predict. Not logging python_function flavor!\n",
+      "2025/10/14 21:47:01 WARNING mlflow.utils.environment: Failed to resolve installed pip version. ``pip`` will be added to conda.yaml environment spec without a version specifier.\n",
+      "2025/10/14 21:47:01 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
+      "2025/10/14 21:47:01 INFO mlflow.store.db.utils: Creating initial MLflow database tables...\n",
+      "2025/10/14 21:47:01 INFO mlflow.store.db.utils: Updating database tables\n",
+      "INFO  [alembic.runtime.migration] Context impl SQLiteImpl.\n",
+      "INFO  [alembic.runtime.migration] Will assume non-transactional DDL.\n",
+      "Registered model 'nyc-taxi-model' already exists. Creating a new version of this model...\n",
+      "Created version '2' of model 'nyc-taxi-model'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "with mlflow.start_run(run_name=\"RandomForestRegressor\"):\n",
+    "    ml_model = RandomForestRegressor(\n",
+    "        n_estimators=100,\n",
+    "        max_depth=15,\n",
+    "        random_state=42\n",
+    "    )\n",
+    "    \n",
+    "    ml_model.fit(X_train, y_train)\n",
+    "    \n",
+    "    mlflow.sklearn.log_model(\n",
+    "        sk_model=model, \n",
+    "        artifact_path=\"model\",\n",
+    "        registered_model_name=\"nyc-taxi-model\"      # This will append the new experiment to the already created experiment\n",
+    "    )\n",
+    "    \n",
+    "    y_pred = ml_model.predict(X_val)\n",
+    "    \n",
+    "    rmse = root_mean_squared_error(y_val, y_pred)\n",
+    "    mlflow.log_metric(\"rmse\", rmse)\n",
+    "    \n",
+    "    # !mkdir models\n",
+    "    with open(\"models/preprocessor.b\", \"wb\") as f_out:\n",
+    "        pickle.dump(dv, f_out)\n",
+    "        \n",
+    "    mlflow.log_artifact(\"models/preprocessor.b\", artifact_path=\"preprocessor\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3d986b5",
+   "metadata": {},
+   "source": [
+    "## Método 2 para registrar modelos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "9ed7e085",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Registered model 'nyc-taxi-model' already exists. Creating a new version of this model...\n",
+      "2025/10/14 21:49:29 WARNING mlflow.tracking._model_registry.fluent: Run with id 789b551243f844af8591e4e54d09d35e has no artifacts at artifact path 'model', registering model based on models:/m-c2468579c45049a9be91efc0d1f1e22b instead\n",
+      "Created version '3' of model 'nyc-taxi-model'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_id = input(\"Ingrese el run_id\")\n",
+    "run_uri = f\"runs:/{run_id}/model\"\n",
+    "\n",
+    "result = mlflow.register_model(\n",
+    "    model_uri=run_uri,\n",
+    "    name=\"nyc-taxi-model\"\n",
+    ")"
    ]
   }
  ],
