man i have no idea what we're doing

--- a/notebooks/initial_tracking.ipynb
+++ b/notebooks/initial_tracking.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "8d8b3eba",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "b1738bbf",
    "metadata": {},
    "outputs": [
@@ -160,22 +160,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025/10/14 21:22:25 INFO mlflow.store.db.utils: Creating initial MLflow database tables...\n",
-      "2025/10/14 21:22:25 INFO mlflow.store.db.utils: Updating database tables\n",
+      "2025/10/16 20:32:27 INFO mlflow.store.db.utils: Creating initial MLflow database tables...\n",
+      "2025/10/16 20:32:27 INFO mlflow.store.db.utils: Updating database tables\n",
       "INFO  [alembic.runtime.migration] Context impl SQLiteImpl.\n",
       "INFO  [alembic.runtime.migration] Will assume non-transactional DDL.\n",
       "INFO  [alembic.runtime.migration] Context impl SQLiteImpl.\n",
-      "INFO  [alembic.runtime.migration] Will assume non-transactional DDL.\n",
-      "2025/10/14 21:22:25 INFO mlflow.tracking.fluent: Experiment with name 'class-nyc-taxi-model-registry-example' does not exist. Creating a new experiment.\n"
+      "INFO  [alembic.runtime.migration] Will assume non-transactional DDL.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<Experiment: artifact_location='file:c:/Users/Vivienne/apps/data_science_project/nyc-taxi-predictions-2025/notebooks/mlruns/2', creation_time=1760498545784, experiment_id='2', last_update_time=1760498545784, lifecycle_stage='active', name='class-nyc-taxi-model-registry-example', tags={}>"
+       "<Experiment: artifact_location='file:c:/Users/Vivienne/apps/data_science_project/nyc-taxi-predictions-2025/notebooks/mlruns/2', creation_time=1760498545784, experiment_id='2', last_update_time=1760498545784, lifecycle_stage='active', name='class-nyc-taxi-model-registry-example', tags={'mlflow.experimentKind': 'custom_model_development'}>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "73216c46",
    "metadata": {},
    "outputs": [],
@@ -364,6 +363,115 @@
     "    model_uri=run_uri,\n",
     "    name=\"nyc-taxi-model\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f75cb3df",
+   "metadata": {},
+   "source": [
+    "## Método 3 para registrar modelos - MLFlow Client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "537f6aac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mlflow import MlflowClient\n",
+    "\n",
+    "client = MlflowClient(tracking_uri=\"sqlite:///mlflow.db\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d157c6b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run_id = input(\"Ingrese el run_id\")\n",
+    "\n",
+    "client.download_artifacts(\n",
+    "    run_id=run_id, \n",
+    "    path='preprocessor', \n",
+    "    dst_path='.'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "616c0746",
+   "metadata": {},
+   "source": [
+    "# <font color= #8FC3FA> **3. Modify Elements in MLFlow** </font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec16be1e",
+   "metadata": {},
+   "source": [
+    "## Set an Alias"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6eb18add",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 'Challenger' Allias to Version 3\n",
+    "client.set_registered_model_alias(\n",
+    "    name=\"nyc-taxi-model\", \n",
+    "    alias=\"challenger\",\n",
+    "    version=3\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad0457b1",
+   "metadata": {},
+   "source": [
+    "## Add Description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2ebe73e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<ModelVersion: aliases=['challenger'], creation_timestamp=1760500169215, current_stage='None', deployment_job_state=None, description=('This model version is a scikit-learn random forest containing 100 decision '\n",
+       " 'trees'), last_updated_timestamp=1760669320659, metrics=None, model_id=None, name='nyc-taxi-model', params=None, run_id='789b551243f844af8591e4e54d09d35e', run_link=None, source='models:/m-c2468579c45049a9be91efc0d1f1e22b', status='READY', status_message=None, tags={}, user_id=None, version=3>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "client.update_model_version(\n",
+    "    name=\"nyc-taxi-model\",\n",
+    "    version=3,\n",
+    "    description=\"This model version is a scikit-learn random forest containing 100 decision trees\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96ce1ad1",
+   "metadata": {},
+   "source": [
+    "## Delete Model"
    ]
   }
  ],
