--- a/notebooks/initial_tracking.ipynb
+++ b/notebooks/initial_tracking.ipynb
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "6eb18add",
    "metadata": {},
    "outputs": [],
@@ -1330,6 +1330,164 @@
    ],
    "source": [
     "champion_version.predict(X = X_val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ac66a3f",
+   "metadata": {},
+   "source": [
+    "----\n",
+    "# <font color= #8FC3FA> **5. Comparar Modelos** </font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "6d8d9387",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_parquet(filename):\n",
+    "    df = pd.read_parquet(filename)\n",
+    "\n",
+    "    df.lpep_dropoff_datetime = pd.to_datetime(df.lpep_dropoff_datetime)\n",
+    "    df.lpep_pickup_datetime = pd.to_datetime(df.lpep_pickup_datetime)\n",
+    "\n",
+    "    df['duration'] = df.lpep_dropoff_datetime - df.lpep_pickup_datetime\n",
+    "    df.duration = df.duration.apply(lambda td: td.total_seconds() / 60)\n",
+    "\n",
+    "    df = df[(df.duration >= 1) & (df.duration <= 60)]\n",
+    "\n",
+    "    categorical = ['PULocationID', 'DOLocationID']\n",
+    "    df[categorical] = df[categorical].astype(str)\n",
+    "    \n",
+    "    return df\n",
+    "\n",
+    "def preprocess(df, dv):\n",
+    "    df['PU_DO'] = df['PULocationID'] + '_' + df['DOLocationID']\n",
+    "    categorical = ['PU_DO']\n",
+    "    numerical = ['trip_distance']\n",
+    "    train_dicts = df[categorical + numerical].to_dict(orient='records')\n",
+    "    return dv.transform(train_dicts)\n",
+    "\n",
+    "\n",
+    "def test_model(name, alias, X_test, y_test):\n",
+    "    model = mlflow.pyfunc.load_model(f\"models:/{name}@{alias}\")\n",
+    "    y_pred = model.predict(X_test)\n",
+    "    return {\"rmse\": root_mean_squared_error(y_test, y_pred)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "9fba3e33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = read_parquet(\"../data/green_tripdata_2025-03.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "8df76fe9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\Vivienne\\\\apps\\\\data_science_project\\\\nyc-taxi-predictions-2025\\\\notebooks\\\\preprocessor'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Download preprocessor\n",
+    "run_id = input(\"Ingrese el run_id\")\n",
+    "\n",
+    "client.download_artifacts(\n",
+    "    run_id=run_id, \n",
+    "    path='preprocessor', \n",
+    "    dst_path='.'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "8b208b62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"preprocessor/preprocessor.b\", \"rb\") as f_in:\n",
+    "    dv = pickle.load(f_in)\n",
+    "\n",
+    "X_test = preprocess(df, dv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "331072ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target = \"duration\"\n",
+    "y_test = df[target].values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8ba54c3",
+   "metadata": {},
+   "source": [
+    "### Comparar modelos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "d99762aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'rmse': 6.01147524270201}"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_model(name=\"nyc-taxi-model\", alias=\"champion\", X_test=X_test, y_test=y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "1e602e47",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'rmse': 565.7889039000793}"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_model(name=\"nyc-taxi-model\", alias=\"challenger\", X_test=X_test, y_test=y_test)"
    ]
   }
  ],
