sighs.... hyperparameter tunning and databricks started giving problems

--- a/experiments/01-databricks_mlflow_model_experiments.ipynb
+++ b/experiments/01-databricks_mlflow_model_experiments.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "id": "96fd27f1",
    "metadata": {},
    "outputs": [],
@@ -47,18 +47,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "a2acc659",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025/10/21 21:10:38 INFO mlflow.tracking.fluent: Experiment with name '/Users/viviana.toledo@iteso.mx/nyc-taxi-experiments' does not exist. Creating a new experiment.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "load_dotenv(override=True)  # Carga las variables del archivo .env\n",
     "EXPERIMENT_NAME = \"/Users/viviana.toledo@iteso.mx/nyc-taxi-experiments\"\n",
@@ -1491,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "id": "7d163cba",
    "metadata": {},
    "outputs": [],
@@ -1501,7 +1493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "id": "38dd1370",
    "metadata": {},
    "outputs": [
@@ -1510,13 +1502,13 @@
      "output_type": "stream",
      "text": [
       "Registered model 'workspace.default.nyc-taxi-model' already exists. Creating a new version of this model...\n",
-      "2025/10/21 21:26:08 WARNING mlflow.tracking._model_registry.fluent: Run with id 7e7fbc4a92044d8291cc89e32a144c23 has no artifacts at artifact path 'model', registering model based on models:/m-32d79bae66674840baa13aee0e2f28f0 instead\n"
+      "2025/10/27 17:27:38 WARNING mlflow.tracking._model_registry.fluent: Run with id 7e7fbc4a92044d8291cc89e32a144c23 has no artifacts at artifact path 'model', registering model based on models:/m-32d79bae66674840baa13aee0e2f28f0 instead\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e1c655f6e3f4afb94ba00ade48d8372",
+       "model_id": "ea1b7b2e0d4a4d399610e442e082595f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1530,7 +1522,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2ab4e92808ff4e7d9b57b7b21dbf34a1",
+       "model_id": "f862e6bdc6c54992ad80caf6c8666fac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1545,7 +1537,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Created version '1' of model 'workspace.default.nyc-taxi-model'.\n"
+      "Created version '7' of model 'workspace.default.nyc-taxi-model'.\n"
      ]
     }
    ],
@@ -1561,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "id": "3e6217e0",
    "metadata": {},
    "outputs": [
@@ -1596,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "id": "efa99f6d",
    "metadata": {},
    "outputs": [
@@ -1605,13 +1597,13 @@
      "output_type": "stream",
      "text": [
       "Registered model 'workspace.default.nyc-taxi-model' already exists. Creating a new version of this model...\n",
-      "2025/10/21 21:26:31 WARNING mlflow.tracking._model_registry.fluent: Run with id 2b61291c8d5e4b97b2b758d1fc784e5b has no artifacts at artifact path 'model', registering model based on models:/m-57dcb50912d74da9a97b88d2c11bc3dd instead\n"
+      "2025/10/27 17:27:51 WARNING mlflow.tracking._model_registry.fluent: Run with id 2b61291c8d5e4b97b2b758d1fc784e5b has no artifacts at artifact path 'model', registering model based on models:/m-57dcb50912d74da9a97b88d2c11bc3dd instead\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "27d70253b5c0428ba0db4334af51759b",
+       "model_id": "98b0e6be22d64b579eca9987cd518904",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1625,7 +1617,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "91aaa05ab0ef44b0bad18968b122fb0f",
+       "model_id": "3b90b57cc1da490d998b4aa1971c0874",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1640,7 +1632,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Created version '2' of model 'workspace.default.nyc-taxi-model'.\n"
+      "Created version '8' of model 'workspace.default.nyc-taxi-model'.\n"
      ]
     }
    ],
@@ -1661,7 +1653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "id": "e43b785b",
    "metadata": {},
    "outputs": [],
@@ -1671,7 +1663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "id": "0db752ab",
    "metadata": {},
    "outputs": [],
@@ -1688,14 +1680,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "id": "add8fa0b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<ModelVersion: aliases=[], creation_timestamp=1761103596058, current_stage=None, deployment_job_state=<ModelVersionDeploymentJobState: current_task_name='', job_id='', job_state='DEPLOYMENT_JOB_CONNECTION_STATE_UNSPECIFIED', run_id='', run_state='DEPLOYMENT_JOB_RUN_STATE_UNSPECIFIED'>, description='The model version 2 was transitioned to Champion on 2025-10-21 21:27:26.264593', last_updated_timestamp=1761103646344, metrics=[<Metric: dataset_digest='', dataset_name='', key='best_iteration', model_id='m-57dcb50912d74da9a97b88d2c11bc3dd', run_id='2b61291c8d5e4b97b2b758d1fc784e5b', step=0, timestamp=1761103367821, value=80.0>,\n",
+       "<ModelVersion: aliases=[], creation_timestamp=1761607677589, current_stage=None, deployment_job_state=<ModelVersionDeploymentJobState: current_task_name='', job_id='', job_state='DEPLOYMENT_JOB_CONNECTION_STATE_UNSPECIFIED', run_id='', run_state='DEPLOYMENT_JOB_RUN_STATE_UNSPECIFIED'>, description='The model version 8 was transitioned to Champion on 2025-10-27 17:28:01.462197', last_updated_timestamp=1761607682095, metrics=[<Metric: dataset_digest='', dataset_name='', key='best_iteration', model_id='m-57dcb50912d74da9a97b88d2c11bc3dd', run_id='2b61291c8d5e4b97b2b758d1fc784e5b', step=0, timestamp=1761103367821, value=80.0>,\n",
        " <Metric: dataset_digest='', dataset_name='', key='rmse', model_id='m-57dcb50912d74da9a97b88d2c11bc3dd', run_id='2b61291c8d5e4b97b2b758d1fc784e5b', step=0, timestamp=1761103372177, value=5.862230443089824>,\n",
        " <Metric: dataset_digest='', dataset_name='', key='stopped_iteration', model_id='m-57dcb50912d74da9a97b88d2c11bc3dd', run_id='2b61291c8d5e4b97b2b758d1fc784e5b', step=0, timestamp=1761103367821, value=90.0>,\n",
        " <Metric: dataset_digest='', dataset_name='', key='validation-rmse', model_id='m-57dcb50912d74da9a97b88d2c11bc3dd', run_id='2b61291c8d5e4b97b2b758d1fc784e5b', step=0, timestamp=1761103366715, value=7.961251487435976>], model_id='m-57dcb50912d74da9a97b88d2c11bc3dd', name='workspace.default.nyc-taxi-model', params=[<LoggedModelParameter: key='reg_alpha', value='0.007731550026907306'>,\n",
@@ -1709,10 +1701,10 @@
        " <LoggedModelParameter: key='max_depth', value='15'>,\n",
        " <LoggedModelParameter: key='objective', value='reg:squarederror'>,\n",
        " <LoggedModelParameter: key='num_boost_round', value='100'>,\n",
-       " <LoggedModelParameter: key='early_stopping_rounds', value='10'>], run_id='2b61291c8d5e4b97b2b758d1fc784e5b', run_link=None, source='models:/m-57dcb50912d74da9a97b88d2c11bc3dd', status='READY', status_message='', tags={}, user_id='viviana.toledo@iteso.mx', version='2'>"
+       " <LoggedModelParameter: key='early_stopping_rounds', value='10'>], run_id='2b61291c8d5e4b97b2b758d1fc784e5b', run_link=None, source='models:/m-57dcb50912d74da9a97b88d2c11bc3dd', status='READY', status_message='', tags={}, user_id='viviana.toledo@iteso.mx', version='8'>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1737,14 +1729,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "id": "41d35f4f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e0c289effd3404e8d895a28aa4b8d03",
+       "model_id": "9e13c90b4bed4c9b93a56e98f95502a7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1759,20 +1751,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\Vivienne\\apps\\data_science_project\\nyc-taxi-predictions-2025\\.venv\\Lib\\site-packages\\mlflow\\xgboost\\__init__.py:321: UserWarning: [21:28:33] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\c_api\\c_api.cc:1511: Unknown file format: `xgb`. Using UBJSON (`ubj`) as a guess.\n",
+      "c:\\Users\\Vivienne\\apps\\data_science_project\\nyc-taxi-predictions-2025\\.venv\\Lib\\site-packages\\mlflow\\xgboost\\__init__.py:321: UserWarning: [17:28:12] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\c_api\\c_api.cc:1511: Unknown file format: `xgb`. Using UBJSON (`ubj`) as a guess.\n",
       "  model.load_model(xgb_model_path)\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "array([ 5.0574026, 24.71894  , 28.723047 , ..., 20.382122 , 13.796955 ,\n",
-       "       22.728203 ], shape=(44218,), dtype=float32)"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'X_val' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m model_version_uri = \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mmodels:/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmodel_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m@Champion\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      3\u001b[39m champion_version = mlflow.pyfunc.load_model(model_version_uri)\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m champion_version.predict(\u001b[43mX_val\u001b[49m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'X_val' is not defined"
+     ]
     }
    ],
    "source": [
