problems with data dimensions entered the chat. may have to do with the previous data preprocessing in notebook 01

--- a/experiments/01-databricks_mlflow_model_experiments.ipynb
+++ b/experiments/01-databricks_mlflow_model_experiments.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "96fd27f1",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "a2acc659",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "id": "d52b50b5",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "id": "abbebbca",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "id": "c75e89d3",
    "metadata": {},
    "outputs": [],
@@ -134,14 +134,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "id": "a7b372dc",
    "metadata": {},
    "outputs": [],
    "source": [
+    "dv = DictVectorizer()\n",
+    "\n",
     "categorical = ['PULocationID', 'DOLocationID']\n",
     "numerical = ['trip_distance']\n",
-    "dv = DictVectorizer()\n",
     "\n",
     "train_dicts = df_train[categorical + numerical].to_dict(orient='records')\n",
     "X_train = dv.fit_transform(train_dicts)\n",
@@ -151,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "id": "d12c4b6e",
    "metadata": {},
    "outputs": [],
@@ -163,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "id": "c299612e",
    "metadata": {},
    "outputs": [],
@@ -1493,66 +1494,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "38dd1370",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Registered model 'workspace.default.nyc-taxi-model' already exists. Creating a new version of this model...\n",
-      "2025/10/27 17:27:38 WARNING mlflow.tracking._model_registry.fluent: Run with id 7e7fbc4a92044d8291cc89e32a144c23 has no artifacts at artifact path 'model', registering model based on models:/m-32d79bae66674840baa13aee0e2f28f0 instead\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea1b7b2e0d4a4d399610e442e082595f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading artifacts:   0%|          | 0/7 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f862e6bdc6c54992ad80caf6c8666fac",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Uploading artifacts:   0%|          | 0/8 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Created version '7' of model 'workspace.default.nyc-taxi-model'.\n"
-     ]
-    }
-   ],
-   "source": [
-    "run_id = input(\"Ingrese el run_id\")\n",
-    "run_uri = f\"runs:/{run_id}/model\"\n",
-    "\n",
-    "result = mlflow.register_model(\n",
-    "    model_uri=run_uri,\n",
-    "    name=\"workspace.default.nyc-taxi-model\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "id": "3e6217e0",
    "metadata": {},
@@ -1597,13 +1538,13 @@
      "output_type": "stream",
      "text": [
       "Registered model 'workspace.default.nyc-taxi-model' already exists. Creating a new version of this model...\n",
-      "2025/10/27 17:27:51 WARNING mlflow.tracking._model_registry.fluent: Run with id 2b61291c8d5e4b97b2b758d1fc784e5b has no artifacts at artifact path 'model', registering model based on models:/m-57dcb50912d74da9a97b88d2c11bc3dd instead\n"
+      "2025/10/27 22:57:49 WARNING mlflow.tracking._model_registry.fluent: Run with id 2b61291c8d5e4b97b2b758d1fc784e5b has no artifacts at artifact path 'model', registering model based on models:/m-57dcb50912d74da9a97b88d2c11bc3dd instead\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "98b0e6be22d64b579eca9987cd518904",
+       "model_id": "868b3b8fa40c4cce8613c73ddfa90318",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1617,7 +1558,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3b90b57cc1da490d998b4aa1971c0874",
+       "model_id": "d16aba057e1f49dab3bd1d1ba32a0652",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1632,7 +1573,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Created version '8' of model 'workspace.default.nyc-taxi-model'.\n"
+      "Created version '10' of model 'workspace.default.nyc-taxi-model'.\n"
      ]
     }
    ],
@@ -1687,7 +1628,8 @@
     {
      "data": {
       "text/plain": [
-       "<ModelVersion: aliases=[], creation_timestamp=1761607677589, current_stage=None, deployment_job_state=<ModelVersionDeploymentJobState: current_task_name='', job_id='', job_state='DEPLOYMENT_JOB_CONNECTION_STATE_UNSPECIFIED', run_id='', run_state='DEPLOYMENT_JOB_RUN_STATE_UNSPECIFIED'>, description='The model version 8 was transitioned to Champion on 2025-10-27 17:28:01.462197', last_updated_timestamp=1761607682095, metrics=[<Metric: dataset_digest='', dataset_name='', key='best_iteration', model_id='m-57dcb50912d74da9a97b88d2c11bc3dd', run_id='2b61291c8d5e4b97b2b758d1fc784e5b', step=0, timestamp=1761103367821, value=80.0>,\n",
+       "<ModelVersion: aliases=[], creation_timestamp=1761627481666, current_stage=None, deployment_job_state=<ModelVersionDeploymentJobState: current_task_name='', job_id='', job_state='DEPLOYMENT_JOB_CONNECTION_STATE_UNSPECIFIED', run_id='', run_state='DEPLOYMENT_JOB_RUN_STATE_UNSPECIFIED'>, description=('The model version 10 was transitioned to Champion on 2025-10-27 '\n",
+       " '22:58:31.169157'), last_updated_timestamp=1761627511355, metrics=[<Metric: dataset_digest='', dataset_name='', key='best_iteration', model_id='m-57dcb50912d74da9a97b88d2c11bc3dd', run_id='2b61291c8d5e4b97b2b758d1fc784e5b', step=0, timestamp=1761103367821, value=80.0>,\n",
        " <Metric: dataset_digest='', dataset_name='', key='rmse', model_id='m-57dcb50912d74da9a97b88d2c11bc3dd', run_id='2b61291c8d5e4b97b2b758d1fc784e5b', step=0, timestamp=1761103372177, value=5.862230443089824>,\n",
        " <Metric: dataset_digest='', dataset_name='', key='stopped_iteration', model_id='m-57dcb50912d74da9a97b88d2c11bc3dd', run_id='2b61291c8d5e4b97b2b758d1fc784e5b', step=0, timestamp=1761103367821, value=90.0>,\n",
        " <Metric: dataset_digest='', dataset_name='', key='validation-rmse', model_id='m-57dcb50912d74da9a97b88d2c11bc3dd', run_id='2b61291c8d5e4b97b2b758d1fc784e5b', step=0, timestamp=1761103366715, value=7.961251487435976>], model_id='m-57dcb50912d74da9a97b88d2c11bc3dd', name='workspace.default.nyc-taxi-model', params=[<LoggedModelParameter: key='reg_alpha', value='0.007731550026907306'>,\n",
@@ -1701,7 +1643,7 @@
        " <LoggedModelParameter: key='max_depth', value='15'>,\n",
        " <LoggedModelParameter: key='objective', value='reg:squarederror'>,\n",
        " <LoggedModelParameter: key='num_boost_round', value='100'>,\n",
-       " <LoggedModelParameter: key='early_stopping_rounds', value='10'>], run_id='2b61291c8d5e4b97b2b758d1fc784e5b', run_link=None, source='models:/m-57dcb50912d74da9a97b88d2c11bc3dd', status='READY', status_message='', tags={}, user_id='viviana.toledo@iteso.mx', version='8'>"
+       " <LoggedModelParameter: key='early_stopping_rounds', value='10'>], run_id='2b61291c8d5e4b97b2b758d1fc784e5b', run_link=None, source='models:/m-57dcb50912d74da9a97b88d2c11bc3dd', status='READY', status_message='', tags={}, user_id='viviana.toledo@iteso.mx', version='10'>"
       ]
      },
      "execution_count": 9,
@@ -1729,14 +1671,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "41d35f4f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e13c90b4bed4c9b93a56e98f95502a7",
+       "model_id": "70d7a2b423b14547ae54d1ab642bfa7e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1751,20 +1693,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\Vivienne\\apps\\data_science_project\\nyc-taxi-predictions-2025\\.venv\\Lib\\site-packages\\mlflow\\xgboost\\__init__.py:321: UserWarning: [17:28:12] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\c_api\\c_api.cc:1511: Unknown file format: `xgb`. Using UBJSON (`ubj`) as a guess.\n",
+      "c:\\Users\\Vivienne\\apps\\data_science_project\\nyc-taxi-predictions-2025\\.venv\\Lib\\site-packages\\mlflow\\xgboost\\__init__.py:321: UserWarning: [23:44:30] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\c_api\\c_api.cc:1511: Unknown file format: `xgb`. Using UBJSON (`ubj`) as a guess.\n",
       "  model.load_model(xgb_model_path)\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'X_val' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m model_version_uri = \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mmodels:/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmodel_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m@Champion\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      3\u001b[39m champion_version = mlflow.pyfunc.load_model(model_version_uri)\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m champion_version.predict(\u001b[43mX_val\u001b[49m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'X_val' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "array([ 5.0574026, 24.71894  , 28.723047 , ..., 20.382122 , 13.796955 ,\n",
+       "       22.728203 ], shape=(44218,), dtype=float32)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
